# fast-api-base

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  backend.dockerfile  docker-compose.yml  start-server.sh
app/: Makefile  README.md  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 8ec838294ad6_add_first_migration.py  b9f3f1e2a001_add_ecommerce_schema.py  c1a2b3d4e5f6_add_phone_and_order_tracking.py  d2e3f4a5b6c7_add_order_shipping_address_and_postal_code.py
app/app/: exceptions.py  main.py
app/app/api/: deps.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: auth.py  ecommerce.py  health.py  users.py  utils.py
app/app/api/api_v1/services/: __init__.py  auth.py  ecommerce.py  users.py
app/app/core/: config.py  security.py
app/app/core/middleware/: get_accept_language_middleware.py
app/app/crud/: base.py  crud_request_log.py  crud_user.py
app/app/db/: base_class.py  init_db.py  session.py
app/app/log/: log.py
app/app/models/: __init__.py  ecommerce.py  request_log.py  user.py
app/app/schemas/: __init__.py  ecommerce.py  health.py  request_log.py  token.py  user.py
app/app/static/: swagger-ui-bundle.js
app/app/utils/: message_codes.py  redis.py  request.py  response.py  user_role.py
app/cache/: cache-doc.md  cache.py  client.py  key_gen.py  redis.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_auth.py  test_ecommerce.py  test_utils.py
app/tests/api/unit/: test_message_codes.py
app/tests/crud/: test_user.py
app/tests/utils/: user.py
scripts/: format.sh
