[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Kamran Abdi <kamranabdicse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
gunicorn = "^23.0.0"
pydantic = {extras = ["dotenv", "email"], version = "^2.10.2"}
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.36"}
celery = "^5.4.0"
fastapi = "^0.115.5"
python-jose = "^3.3.0"
persiantools = "^5.1.0"
python-multipart = "^0.0.19"
tenacity = "^9.0.0"
fakeredis = "^2.26.1"
redis = "^5.2.0"
asyncpg = "^0.30.0"
flake8 = "^7.1.1"
black = "^24.10.0"
httpx = "^0.28.0"
jdatetime = "^4.1.1"
pandas = "^2.2.3"
requests = "^2.32.3"
pydantic-settings = "^2.6.1"
pydantic-core = "^2.27.1"
pytest-asyncio = "0.21.2"
pyjwt = "^2.10.1"
greenlet = "^3.1.1"
brotli-asgi = "^1.4.0"
richapi = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest="*"
black="*"
ruff="*"
isort="*"
mypy = "^1.13.0"
aiosqlite = "^0.20.0"

[tool.black]
line-length = 88
exclude = '''
(
  .*versions/*
)
'''

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
]
exclude = ["versions"]
unfixable = ["E712", "B010"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"app/db/base.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["pydantic"]

[tool.isort]
profile = "black"
skip = ["versions"]

[tool.mypy]
strict = false
warn_unused_ignores = false
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["alembic.*", "cache.*"]
ignore_errors = true
